# accrt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: alloc_info.h  device_manager.h  oaru.h  openacc.h
include/cuda/: cuda_alloc_info.h  cuda_device_manager.h  cuda_helper.h  device_manager.h
src/: openacc.cpp
src/cuda/: cuda_device_manager.cpp  cuda_helper.cpp  device_manager.cpp
src/oaru/: oaru.cpp
test/: CMakeLists.txt  basic.cpp
